tests/snapshots/examples_fixtures/hint_demos__type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/hint_demos/type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify String with Int.

  --> examples/hint_demos/type_mismatch.flx:13:15
   |
13 | let invalid = name + age;
   |               ^^^^^^^^^^
   |               ---------- expected String, found Int


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify matching '+' operands (Int+Int, Float+Float, or String+String) with String and Int.

  --> examples/hint_demos/type_mismatch.flx:13:15
   |
13 | let invalid = name + age;
   |               ^^^^^^^^^^
   |               ---------- expected matching '+' operands (Int+Int, Float+Float, or String+String), found String and Int
   |               ---------- operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion

Found 2 errors.
== stdout ==
<not executed>
